base1: Fix alignment for our form table labels
This has been broken since the migration to Patternfly. The additional
margin at the bottom of these labels causes all labels to be out of
alignment.

Fixes #2202

--- a/pkg/base1/cockpit.css
+++ b/pkg/base1/cockpit.css
@@ -153,6 +153,14 @@ a {
     margin: 8px;
 }
 
+.cockpit-form-table label {
+    margin-bottom: 0px;
+}
+
+.cockpit-form-table td.top label {
+    margin-top: 4px;
+}
+
 .journal-lines .panel-heading {
     border-top: 1px solid #ddd;
     border-bottom: 0;
